--- a/AdventCode02.csproj
+++ b/AdventCode02.csproj
@@ -11,6 +11,9 @@
       <None Update="input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
